--- a/index.html
+++ b/index.html
@@ -4,25 +4,7 @@
   <title>LoyaltyChess</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      margin: 0;
-      background-color: #0f172a;
-      color: white;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-    }
-    h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 20px;
-      opacity: 0.8;
-    }
+   
   </style>
 </head>
 <body>
@@ -32,5 +14,19 @@
     <p>Unprotected pieces do not stay loyal.</p>
     <p><strong>Launching Soon.</strong></p>
   </div>
+  <div>
+   button {
+      padding: 15px 30px;
+      font-size: 18px;
+      background-color: gold;
+      border: none;
+      cursor: pointer;
+      border-radius: 8px;
+    }
+
+    button:hover {
+      background-color: orange;
+    }
+    <div>
 </body>
 </html>
