--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <p>Chess with consequences.</p>
     <p>Unprotected pieces do not stay loyal.</p>
     <p><strong>Launching Soon.</strong></p>
+       button {
+      padding: 15px 30px;
+      font-size: 18px;
+      background-color: gold;
+      border: none;
+      cursor: pointer;
+      border-radius: 8px;
+    }
+
+    button:hover {
+      background-color: orange;
+    }
+    <button onclick="window.location.href='home.html'" class="start-btn">
+  Enter
+</button>
   </div>
  
    button {
