--- a/index.html
+++ b/index.html
@@ -4,7 +4,38 @@
   <title>LoyaltyChess</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-   
+    body {
+      margin: 0;
+      background-color: #0f172a;
+      color: white;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
+    h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 20px;
+      opacity: 0.8;
+    }
+    .start-btn {
+      margin-top: 30px;
+      padding: 12px 28px;
+      font-size: 18px;
+      background-color: #facc15;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .start-btn:hover {
+      background-color: #eab308;
+    }
   </style>
 </head>
 <body>
@@ -13,35 +44,11 @@
     <p>Chess with consequences.</p>
     <p>Unprotected pieces do not stay loyal.</p>
     <p><strong>Launching Soon.</strong></p>
-       button {
-      padding: 15px 30px;
-      font-size: 18px;
-      background-color: gold;
-      border: none;
-      cursor: pointer;
-      border-radius: 8px;
-    }
 
-    button:hover {
-      background-color: orange;
-    }
     <button onclick="window.location.href='home.html'" class="start-btn">
-  Enter
-</button>
-  </div>
- 
-   button {
-      padding: 15px 30px;
-      font-size: 18px;
-      background-color: gold;
-      border: none;
-      cursor: pointer;
-      border-radius: 8px;
-    }
+      Enter
+    </button>
 
-    button:hover {
-      background-color: orange;
-    }
-   
+  </div>
 </body>
 </html>
