--- a/home.html
+++ b/home.html
@@ -5,6 +5,6 @@
 </head>
 <body style="background:#222; color:white; text-align:center; padding-top:100px; font-family:Arial;">
   <h1>Ana Sayfa</h1>
-  <p>Oyun yakında burada başlayacak.</p>
+  <p>An experimental approach to chess: the emotional layer rule</p>
 </body>
 </html>
