--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LoyaltyChess - Ana Sayfa</title>
+  <title>LoyaltyChess - MAİN PAGE</title>
 </head>
 <body style="background:#222; color:white; text-align:center; padding-top:100px; font-family:Arial;">
   <h1>Ana Sayfa</h1>
-  <p>An experimental approach to chess: the emotional layer rule</p>
+  <p>An Experimental Approach to CHESS: The Emotional Layer Rule</p>
 </body>
 </html>
