--- a/home.html
+++ b/home.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LoyaltyChess - MAİN PAGE</title>
+  <title>LoyaltyChess Demo</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      margin: 50px;
+    }
+    .board {
+      display: grid;
+      grid-template-columns: repeat(8, 50px);
+      grid-template-rows: repeat(8, 50px);
+      gap: 0;
+      border: 2px solid #000;
+    }
+    .cell {
+      width: 50px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 32px;
+      cursor: pointer;
+    }
+    .cell.black { background-color: #769656; }
+    .cell.white { background-color: #eeeed2; }
+    .threat { background-color: #f87171 !important; } /* kırmızı tehdit */
+    .betrayed { opacity: 0.5; } /* ihanet edilmiş taş */
+    .rules {
+      margin-left: 50px;
+      max-width: 300px;
+    }
+    .rules h2 { margin-top: 0; }
+    .rules ul { line-height: 1.6; }
+  </style>
 </head>
-<body style="background:#222; color:white; text-align:center; padding-top:100px; font-family:Arial;">
-  <h1>Ana Sayfa</h1>
-  <p>An Experimental Approach to CHESS: The Emotional Layer Rule</p>
+<body>
+  <div class="board" id="board"></div>
+
+  <div class="rules">
+    <h2>Loyalty Rules</h2>
+    <ul>
+      <li>Unprotected pieces may betray their owner.</li>
+      <li>Only pawns, rooks, bishops can betray in this demo.</li>
+      <li>Check is possible but betrayal is prioritized.</li>
+    </ul>
+  </div>
+
+  <script>
+    const board = document.getElementById('board');
+    const initialBoard = [
+      ['♜','♞','♝','♛','♚','♝','♞','♜'],
+      ['♟','♟','♟','♟','♟','♟','♟','♟'],
+      ['','','','','','','',''],
+      ['','','','','','','',''],
+      ['','','','','','','',''],
+      ['','','','','','','',''],
+      ['♙','♙','♙','♙','♙','♙','♙','♙'],
+      ['♖','♘','♗','♕','♔','♗','♘','♖']
+    ];
+
+    // Tahtayı oluştur
+    for(let r=0; r<8; r++){
+      for(let c=0; c<8; c++){
+        const cell = document.createElement('div');
+        cell.classList.add('cell');
+        cell.classList.add((r+c)%2===0 ? 'white' : 'black');
+        cell.id = cell-${r}-${c};
+        cell.textContent = initialBoard[r][c];
+        board.appendChild(cell);
+      }
+    }
+
+    // Demo hamleleri: 4-5 hamle ile ihanet göstermek
+    setTimeout(()=>{ document.getElementById('cell-6-4').classList.add('threat'); }, 1000); // beyaz piyon tehdit
+    setTimeout(()=>{ document.getElementById('cell-6-4').classList.add('betrayed'); }, 2500); // ihanet olmuş
+    setTimeout(()=>{ document.getElementById('cell-1-3').classList.add('threat'); }, 3000); // siyah piyon tehdit
+    setTimeout(()=>{ document.getElementById('cell-1-3').classList.add('betrayed'); }, 4500); // ihanet olmuş
+  </script>
 </body>
 </html>
