--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <title>LoyaltyChess Demo</title>
   <style>
     body {
-      font-family:'Segoe UI Symbol'Arial, sans-serif;
+      font-family:'Segoe UI Symbol',Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: flex-start;
