--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
     }
     .board {
       display: grid;
-      grid-template-columns: repeat(8, 50px);
-      grid-template-rows: repeat(8, 50px);
+      grid-template-columns: repeat(8,50px);
+      grid-template-rows: repeat(8,50px);
       gap: 0;
       border: 2px solid #000;
     }
