--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI Symbol', Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: flex-start;
@@ -14,10 +14,11 @@
       color: white;
     }
     .board {
+      width: 400px;
+      height: 400px;
       display: grid;
       grid-template-columns: repeat(8, 50px);
       grid-template-rows: repeat(8, 50px);
-      gap: 0;
       border: 2px solid #000;
     }
     .cell {
@@ -32,8 +33,8 @@
     }
     .cell.black { background-color: #769656; }
     .cell.white { background-color: #eeeed2; }
-    .threat { background-color: #f87171 !important; } /* tehdit kırmızı */
-    .betrayed { opacity: 0.5; } /* ihanet edilmiş taş */
+    .threat { background-color: #f87171 !important; }
+    .betrayed { opacity: 0.5; }
     .rules {
       margin-left: 50px;
       max-width: 300px;
@@ -56,48 +57,37 @@
   </div>
 
   <script>
-    const board = document.getElementById('board');
+    document.addEventListener('DOMContentLoaded', () => {
+      const board = document.getElementById('board');
 
-    // Emoji taşlar (her tarayıcı destekler)
-    const initialBoard = [
-      ['♜','♞','♝','♛','♚','♝','♞','♜'],
-      ['♟','♟','♟','♟','♟','♟','♟','♟'],
-      ['','','','','','','',''],
-      ['','','','','','','',''],
-      ['','','','','','','',''],
-      ['','','','','','','',''],
-      ['♙','♙','♙','♙','♙','♙','♙','♙'],
-      ['♖','♘','♗','♕','♔','♗','♘','♖']
-    ];
+      const initialBoard = [
+        ['♜','♞','♝','♛','♚','♝','♞','♜'],
+        ['♟','♟','♟','♟','♟','♟','♟','♟'],
+        ['','','','','','','',''],
+        ['','','','','','','',''],
+        ['','','','','','','',''],
+        ['','','','','','','',''],
+        ['♙','♙','♙','♙','♙','♙','♙','♙'],
+        ['♖','♘','♗','♕','♔','♗','♘','♖']
+      ];
 
-    // Tahtayı oluştur
-    for(let r=0; r<8; r++){
-      for(let c=0; c<8; c++){
-        const cell = document.createElement('div');
-        cell.classList.add('cell');
-        cell.classList.add((r+c)%2===0 ? 'white' : 'black');
-        cell.id = cell-${r}-${c};
-        cell.textContent = initialBoard[r][c];
-        board.appendChild(cell);
+      for(let r=0; r<8; r++){
+        for(let c=0; c<8; c++){
+          const cell = document.createElement('div');
+          cell.classList.add('cell');
+          cell.classList.add((r+c)%2===0 ? 'white' : 'black');
+          cell.id = cell-${r}-${c};
+          cell.textContent = initialBoard[r][c];
+          board.appendChild(cell);
+        }
       }
-    }
 
-    // Demo hamleleri: 4-5 hamle ile ihanet göstermek
-    setTimeout(()=>{
-      document.getElementById('cell-6-4').classList.add('threat'); // beyaz piyon tehdit
-    }, 1000);
-
-    setTimeout(()=>{
-      document.getElementById('cell-6-4').classList.add('betrayed'); // ihanet olmuş
-    }, 2500);
-
-    setTimeout(()=>{
-      document.getElementById('cell-1-3').classList.add('threat'); // siyah piyon tehdit
-    }, 3000);
-
-    setTimeout(()=>{
-      document.getElementById('cell-1-3').classList.add('betrayed'); // ihanet olmuş
-    }, 4500);
+      // Demo hamleleri
+      setTimeout(()=>{ document.getElementById('cell-6-4').classList.add('threat'); }, 1000);
+      setTimeout(()=>{ document.getElementById('cell-6-4').classList.add('betrayed'); }, 2500);
+      setTimeout(()=>{ document.getElementById('cell-1-3').classList.add('threat'); }, 3000);
+      setTimeout(()=>{ document.getElementById('cell-1-3').classList.add('betrayed'); }, 4500);
+    });
   </script>
 
 </body>
