--- a/home.html
+++ b/home.html
@@ -1,109 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <head>
-  <title>LoyaltyChess Demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: 'Segoe UI Symbol', Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      margin: 50px;
-      background-color: #0f172a;
-      color: white;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JS Satranç Tahtası</title>
+    <style>
+        /* CSS: Görünüm Ayarları */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #2c3e50;
+            margin: 0;
+            font-family: sans-serif;
+        }
 
-    /* Satranç Tahtası */
-    .board {
-      width: 400px;
-      height: 400px;
-      display: grid;
-      grid-template-columns: repeat(8, 50px);
-      grid-template-rows: repeat(8, 50px);
-      border: 4px solid #222; /* Tahta çevresi */
-    }
+        #board-container {
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            border: 10px solid #34495e;
+            border-radius: 4px;
+        }
 
-    /* Hücreler */
-    .cell {
-      width: 50px;
-      height: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 32px;
-      cursor: pointer;
-      user-select: none;
-    }
+        #chess-board {
+            display: grid;
+            grid-template-columns: repeat(8, 70px);
+            grid-template-rows: repeat(8, 70px);
+        }
 
-    /* Klasik satranç renkleri */
-    .white { background-color: #eeeed2; }
-    .black { background-color: #769656; }
+        .square {
+            width: 70px;
+            height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 45px;
+            cursor: pointer;
+            user-select: none;
+            transition: background 0.2s;
+        }
 
-    /* Tehdit / ihanet */
-    .threat { background-color: #f87171 !important; }
-    .betrayed { opacity: 0.5; }
+        /* Klasik Satranç Renkleri */
+        .white { background-color: #eeeed2; color: #000; }
+        .black { background-color: #769656; color: #000; }
 
-    /* Sağ kurallar paneli */
-    .rules {
-      margin-left: 50px;
-      max-width: 300px;
-    }
-    .rules h2 { margin-top: 0; }
-    .rules ul { line-height: 1.6; }
-  </style>
+        /* Üzerine gelince belli olsun */
+        .square:hover {
+            filter: brightness(1.1);
+        }
+    </style>
 </head>
 <body>
 
-  <!-- Tahta -->
-  <div class="board" id="board"></div>
+    <div id="board-container">
+        <div id="chess-board"></div>
+    </div>
 
-  <!-- Kurallar -->
-  <div class="rules">
-    <h2>Loyalty Rules</h2>
-    <ul>
-      <li>Unprotected pieces may betray their owner.</li>
-      <li>Only pawns, rooks, and bishops can betray in this demo.</li>
-      <li>Check is possible but betrayal is prioritized.</li>
-    </ul>
-  </div>
+    <script>
+        // JS: Tahta Oluşturma ve Taş Dizilimi
+        const board = document.getElementById('chess-board');
 
-  <!-- JS Animasyon -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const board = document.getElementById('board');
+        // Unicode Satranç Taşları
+        const pieces = {
+            'r': '♜', 'n': '♞', 'b': '♝', 'q': '♛', 'k': '♚', 'p': '♟',
+            'R': '♖', 'N': '♘', 'B': '♗', 'Q': '♕', 'K': '♔', 'P': '♙'
+        };
 
-      const initialBoard = [
-        ['♜','♞','♝','♛','♚','♝','♞','♜'],
-        ['♟','♟','♟','♟','♟','♟','♟','♟'],
-        ['','','','','','','',''],
-        ['','','','','','','',''],
-        ['','','','','','','',''],
-        ['','','','','','','',''],
-        ['♙','♙','♙','♙','♙','♙','♙','♙'],
-        ['♖','♘','♗','♕','♔','♗','♘','♖']
-      ];
+        // Standart Başlangıç Dizilimi (8x8)
+        const layout = [
+            'r','n','b','q','k','b','n','r', // Siyah ana taşlar
+            'p','p','p','p','p','p','p','p', // Siyah piyonlar
+            '','','','','','','','',         // Boş
+            '','','','','','','','',         // Boş
+            '','','','','','','','',         // Boş
+            '','','','','','','','',         // Boş
+            'P','P','P','P','P','P','P','P', // Beyaz piyonlar
+            'R','N','B','Q','K','B','N','R'  // Beyaz ana taşlar
+        ];
 
-      // Tahtayı oluştur
-      for(let r=0; r<8; r++){
-        for(let c=0; c<8; c++){
-          const cell = document.createElement('div');
-          cell.classList.add('cell');
-          // Alternating black/white squares
-          cell.classList.add((r + c) % 2 === 0 ? 'white' : 'black');
-          cell.id = cell-${r}-${c};
-          cell.textContent = initialBoard[r][c];
-          board.appendChild(cell);
+        function createBoard() {
+            for (let i = 0; i < 64; i++) {
+                const square = document.createElement('div');
+                square.classList.add('square');
+
+                // Satır ve Sütun bulma
+                const row = Math.floor(i / 8);
+                const col = i % 8;
+
+                // Kareleri renklendirme (Dama düzeni)
+                if ((row + col) % 2 === 0) {
+                    square.classList.add('white');
+                } else {
+                    square.classList.add('black');
+                }
+
+                // Taşları yerleştirme
+                const pieceSymbol = layout[i];
+                if (pieceSymbol) {
+                    square.textContent = pieces[pieceSymbol];
+                }
+
+                board.appendChild(square);
+            }
         }
-      }
 
-      // Demo animasyonu: 4–5 hamlede ihanet
-      setTimeout(()=>{ document.getElementById('cell-6-4').classList.add('threat'); }, 1000);
-      setTimeout(()=>{ document.getElementById('cell-6-4').classList.add('betrayed'); }, 2500);
-      setTimeout(()=>{ document.getElementById('cell-1-3').classList.add('threat'); }, 3000);
-      setTimeout(()=>{ document.getElementById('cell-1-3').classList.add('betrayed'); }, 4500);
-    });
-  </script>
-
+        createBoard();
+    </script>
 </body>
 </html>
