--- a/home.html
+++ b/home.html
@@ -37,15 +37,38 @@
             border: 5px solid #34495e;
         }
 
-        .square {
-            width: 65px;
-            height: 65px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 40px;
-            user-select: none;
-        }
+       .square {
+    width: 70px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px; /* Taşları biraz daha büyüttük */
+    cursor: pointer;
+    user-select: none;
+    /* Taşların etrafına hafif bir hat çizerek kontrastı artırıyoruz */
+    text-shadow: 0px 0px 2px rgba(0,0,0,0.2); 
+    transition: all 0.2s;
+}
+
+/* Beyaz taşlar için (eğer ayrı sınıflar tanımlarsan) */
+.white-piece {
+    color: #ffffff;
+    text-shadow: 0 0 5px rgba(0,0,0,0.5); /* Beyaz taşın etrafına siyah gölge */
+}
+
+/* Siyah taşlar için */
+.black-piece {
+    color: #000000;
+}
+
+/* Kare Renklerini Daha Net Yapalım */
+.white { 
+    background-color: #ebecd0; /* Biraz daha krem/beyaz */
+}
+.black { 
+    background-color: #779556; /* Daha doygun bir yeşil */
+}
 
         .white { background-color: #eeeed2; }
         .black { background-color: #769656; }
@@ -138,12 +161,19 @@
             square.classList.add((row + col) % 2 === 0 ? 'white' : 'black');
 
             // Taş yerleştirme
-            if (layout[i]) {
-                square.textContent = pieces[layout[i]];
-            }
-
-            board.appendChild(square);
-        }
+          
+const pieceSymbol = layout[i];
+if (pieceSymbol) {
+    square.textContent = pieces[pieceSymbol];
+    
+    // Küçük harfler siyah, büyük harfler beyaz taşları temsil ediyor
+    if (pieceSymbol === pieceSymbol.toLowerCase()) {
+        square.style.color = "#000"; // Siyah taşlar tam siyah
+    } else {
+        square.style.color = "#fff"; // Beyaz taşlar tam beyaz
+        square.style.textShadow = "0 0 3px #000"; // Beyaz taşın etrafına siyah çerçeve
+    }
+}
     </script>
 </body>
 </html>
