--- a/home.html
+++ b/home.html
@@ -38,17 +38,38 @@
         }
 
         .square {
-            width: 65px;
-            height: 65px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 40px;
-            user-select: none;
-        }
+    width: 70px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px; /* Taşları biraz daha büyüttük */
+    cursor: pointer;
+    user-select: none;
+    /* Taşların etrafına hafif bir hat çizerek kontrastı artırıyoruz */
+    text-shadow: 0px 0px 2px rgba(0,0,0,0.2); 
+    transition: all 0.2s;
+}
 
-        .white { background-color: #eeeed2; }
-        .black { background-color: #769656; }
+/* Beyaz taşlar için (eğer ayrı sınıflar tanımlarsan) */
+.white-piece {
+    color: #ffffff;
+    text-shadow: 0 0 5px rgba(0,0,0,0.5); /* Beyaz taşın etrafına siyah gölge */
+}
+
+/* Siyah taşlar için */
+.black-piece {
+    color: #000000;
+}
+
+/* Kare Renklerini Daha Net Yapalım */
+.white { 
+    background-color: #ebecd0; /* Biraz daha krem/beyaz */
+}
+.black { 
+    background-color: #779556; /* Daha doygun bir yeşil */
+}
+        
 
         /* KURALLAR PANELİ */
         .rules-panel {
