--- a/home.html
+++ b/home.html
@@ -14,6 +14,18 @@
 }
 
 /* Taşların genel stili */
+.square {
+    width: 70px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+/* Taşların genel stili */
+    </style>
+    
 .piece {
     width: 90%;
     height: 90%;
@@ -37,7 +49,7 @@
 .black-rook   { background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg'); }
 .black-bishop { background-image: url('https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg'); }
 .black-knight { background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg'); }
-.black-pawn   { background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg'); }
+.black-pawn   { background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg'); }ss_pdt45.svg'); }
     </style>
 </head>
 <body>
