--- a/home.html
+++ b/home.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LoyaltyChess - Complete Edition</title>
+    <title>LoyaltyChess - Betrayal Edition</title>
     <style>
-        /* GENEL SAYFA DÜZENİ */
+        /* GENEL SAYFA TASARIMI */
         body {
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
             min-height: 100vh;
             background-color: #1a1a1a;
@@ -16,9 +16,6 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: #ecf0f1;
         }
-
-        .header { margin: 20px 0; text-align: center; }
-        .header h1 { color: #f1c40f; margin: 0; font-size: 32px; letter-spacing: 2px; }
 
         .main-container {
             display: flex;
@@ -31,31 +28,42 @@
             justify-content: center;
         }
 
-        /* TAHTA TASARIMI */
+        /* SATRANÇ TAHTASI TASARIMI */
         #chess-board {
             display: grid;
-            grid-template-columns: repeat(8, 65px);
-            grid-template-rows: repeat(8, 65px);
+            grid-template-columns: repeat(8, 70px);
+            grid-template-rows: repeat(8, 70px);
             border: 8px solid #34495e;
             border-radius: 4px;
+            user-select: none;
         }
 
         .square {
-            width: 65px; height: 65px;
-            display: flex; justify-content: center; align-items: center;
+            width: 70px;
+            height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             transition: all 0.2s;
         }
 
+        /* Kare Renkleri (Daha Yüksek Kontrast) */
         .white { background-color: #ebecd0; }
         .black { background-color: #779556; }
 
-        /* TAŞLAR (SVG) */
+        .square:hover {
+            filter: brightness(1.05);
+            cursor: pointer;
+        }
+
+        /* TAŞLARIN TASARIMI (SVG) */
         .piece {
-            width: 90%; height: 90%;
+            width: 90%;
+            height: 90%;
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
-            transition: all 0.4s ease;
+            pointer-events: none; /* Tıklamayı arka plandaki kareye iletir */
         }
 
         /* Beyaz Taşlar */
@@ -74,98 +82,124 @@
         .b-n { background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg'); }
         .b-p { background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg'); }
 
-        /* İHANET EFEKTİ */
-        .betrayal-glow {
-            filter: drop-shadow(0 0 12px #ff0000) sepia(0.5) saturate(3);
-            animation: pulse 1.2s infinite;
-        }
-
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
-        }
-
-        /* SAĞ PANEL */
-        .side-panel {
-            max-width: 380px;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
+        /* KURALLAR PANELİ TASARIMI */
         .rules-panel {
+            max-width: 380px;
             background-color: #34495e;
-            padding: 20px;
+            padding: 25px;
             border-radius: 10px;
             border-left: 5px solid #f1c40f;
+            box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
         }
 
-        .rules-panel h2 { color: #f1c40f; margin-top: 0; font-size: 22px; }
-        
-        .tutorial-box {
-            background-color: #16a085;
-            padding: 15px;
-            border-radius: 8px;
-            font-weight: bold;
-            text-align: center;
+        .rules-panel h2 {
+            margin-top: 0;
+            color: #f1c40f;
+            font-size: 24px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            border-bottom: 1px solid #5d6d7e;
+            padding-bottom: 10px;
         }
 
-        button {
-            padding: 15px;
-            background-color: #f1c40f;
-            border: none;
-            border-radius: 5px;
-            font-weight: bold;
-            cursor: pointer;
+        .rules-list {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .rules-list li {
+            margin-bottom: 15px;
+            line-height: 1.4;
+            font-size: 14.5px;
+        }
+
+        .rules-list b {
+            color: #f39c12;
+            display: block;
+            margin-bottom: 2px;
             font-size: 16px;
-            transition: background 0.3s;
         }
-        button:hover { background-color: #d4ac0d; }
 
-        .rules-list { list-style: none; padding: 0; font-size: 14px; line-height: 1.6; }
-        .rules-list b { color: #f39c12; display: block; margin-top: 10px; }
+        hr {
+            border: 0;
+            border-top: 1px solid #5d6d7e;
+            margin: 15px 0;
+        }
 
+        /* MOBİL UYUMLULUK */
         @media (max-width: 850px) {
-            .main-container { flex-direction: column; align-items: center; }
+            .main-container { flex-direction: column; align-items: center; padding: 15px; }
             #chess-board { grid-template-columns: repeat(8, 45px); grid-template-rows: repeat(8, 45px); }
             .square { width: 45px; height: 45px; }
+            .rules-panel { max-width: 340px; }
         }
     </style>
 </head>
 <body>
 
-<div class="header">
-    <h1>LOYALTY CHESS</h1>
-</div>
-
 <div class="main-container">
     <div id="chess-board"></div>
 
-    <div class="side-panel">
-        <div class="tutorial-box" id="step-msg">
-            Click "Next Step" to see a betrayal scenario!
-        </div>
-        
-        <button onclick="nextStep()">Next Step</button>
-
-        <div class="rules-panel">
-            <h2>LoyaltyChess Rules</h2>
-            <ul class="rules-list">
-                <li><b>The Betrayal Rule:</b> If a piece is threatened and left undefended, it becomes a traitor. The opponent can use it for ONE move.</li>
-                <li><b>Exceptions:</b> <u>Pawns and Queens</u> are exempt from betrayal. Only Rooks, Knights, and Bishops can betray.</li>
-                <li><b>Traitors:</b> Cannot deliver a check/mate. After their move, they are removed from the game.</li>
-                <li><b>Standard Moves:</b> Standard chess rules apply for King, Queen, and Pawns.</li>
-            </ul>
-        </div>
+    <div class="rules-panel">
+        <h2>LoyaltyChess Rules</h2>
+        <ul class="rules-list">
+            <li><b>The Betrayal Rule:</b> If a piece is threatened by the opponent, the player must either move or protect that piece. If it's left undefended and the opponent is allowed to take it, the "Betrayal" begins.</li>
+            <li><b>Traitors:</b> Instead of removing the undefended piece, the opponent uses it as their own for ONE immediate move.</li>
+            <li><b>Limitations:</b> A traitor piece CANNOT deliver a check or checkmate. However, it can capture any other piece.</li>
+            <li><b>Sacrifice:</b> Once the betrayal move is complete, the piece has fulfilled its duty and is removed from the board permanently.</li>
+            <hr>
+            <li><b>Piece Movement:</b> Standard chess movements apply for King (♔), Queen (♕), Rook (♖), Bishop (♗), Knight (♘), and Pawn (♙).</li>
+        </ul>
     </div>
 </div>
 
 <script>
     const board = document.getElementById('chess-board');
-    let currentStep = 0;
 
+    // Taşların CSS sınıflarıyla eşleşmesi
     const piecesToClass = {
-        'r': 'b-r', 'n': 'b-n', 'b': 'b-b', 'q': 'b-q', 'k': 'b-k', 'p': 'b-p',
-        'R': 'w-r', 'N': 'w-n', 'B': 'w-b', 'Q': 'w-q', 'K': 'w-k', 'P': 'w-p'
+        'r': 'b-r', 'n': 'b-n', 'b': 'b-b', 'q': 'b-q', 'k': 'b-k', 'p': 'b-p', // Black
+        'R': 'w-r', 'N': 'w-n', 'B': 'w-b', 'Q': 'w-q', 'K': 'w-k', 'P': 'w-p'  // White
     };
+
+    // Standart Başlangıç Dizilimi
+    const layout = [
+        'r','n','b','q','k','b','n','r',
+        'p','p','p','p','p','p','p','p',
+        '','','','','','','','',
+        '','','','','','','','',
+        '','','','','','','','',
+        '','','','','','','','',
+        'P','P','P','P','P','P','P','P',
+        'R','N','B','Q','K','B','N','R'
+    ];
+
+    function initGame() {
+        for (let i = 0; i < 64; i++) {
+            const square = document.createElement('div');
+            square.classList.add('square');
+
+            // Renklendirme mantığı
+            const row = Math.floor(i / 8);
+            const col = i % 8;
+            square.classList.add((row + col) % 2 === 0 ? 'white' : 'black');
+
+            // Taş varsa ekle
+            const pieceSymbol = layout[i];
+            if (pieceSymbol) {
+                const pieceDiv = document.createElement('div');
+                pieceDiv.classList.add('piece');
+                pieceDiv.classList.add(piecesToClass[pieceSymbol]);
+                square.appendChild(pieceDiv);
+            }
+
+            board.appendChild(square);
+        }
+    }
+
+    initGame();
+</script>
+
+</body>
+</html>
