--- a/home.html
+++ b/home.html
@@ -145,7 +145,7 @@
         <h2>LoyaltyChess Rules</h2>
         <ul class="rules-list">
             <li><b>The Betrayal Rule:</b> If a piece is threatened by the opponent, the player must either move or protect that piece. If it's left undefended and the opponent is allowed to take it, the "Betrayal" begins.</li>
-            <li><b>WHİCH PİECE<b> This rule applies only to Rooks, Knights, andBishops. Queens and Pawns cannot betray.<li>
+            <li><b>WHİCH PİECE</b> This rule applies only to Rooks, Knights, andBishops. Queens and Pawns cannot betray.</li>
                 <li><b>Traitors:</b> Instead of removing the undefended piece, the opponent uses it as their own for ONE immediate move.</li>
             <li><b>Limitations:</b> A traitor piece CANNOT deliver a check or checkmate. However, it can capture any other piece.</li>
             <li><b>Sacrifice:</b> Once the betrayal move is complete, the piece has fulfilled its duty and is removed from the board permanently.</li>
