--- a/home.html
+++ b/home.html
@@ -3,204 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LoyaltyChess - Betrayal Edition</title>
-    <style>
-        /* GENEL SAYFA TASARIMI */
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #1a1a1a;
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #ecf0f1;
-        }
-
-        .main-container {
-            display: flex;
-            gap: 40px;
-            padding: 30px;
-            background-color: #2c3e50;
-            border-radius: 15px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.7);
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        /* SATRANÇ TAHTASI TASARIMI */
-        #chess-board {
-            display: grid;
-            grid-template-columns: repeat(8, 70px);
-            grid-template-rows: repeat(8, 70px);
-            border: 8px solid #34495e;
-            border-radius: 4px;
-            user-select: none;
-        }
-
-        .square {
-            width: 70px;
-            height: 70px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all 0.2s;
-        }
-
-        /* Kare Renkleri (Daha Yüksek Kontrast) */
-        .white { background-color: #ebecd0; }
-        .black { background-color: #779556; }
-
-        .square:hover {
-            filter: brightness(1.05);
-            cursor: pointer;
-        }
-
-        /* TAŞLARIN TASARIMI (SVG) */
-        .piece {
-            width: 90%;
-            height: 90%;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-            pointer-events: none; /* Tıklamayı arka plandaki kareye iletir */
-        }
-
-        /* Beyaz Taşlar */
-        .w-k { background-image: url('https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg'); }
-        .w-q { background-image: url('https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg'); }
-        .w-r { background-image: url('https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg'); }
-        .w-b { background-image: url('https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg'); }
-        .w-n { background-image: url('https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg'); }
-        .w-p { background-image: url('https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'); }
-
-        /* Siyah Taşlar */
-        .b-k { background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg'); }
-        .b-q { background-image: url('https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg'); }
-        .b-r { background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg'); }
-        .b-b { background-image: url('https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg'); }
-        .b-n { background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg'); }
-        .b-p { background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg'); }
-
-        /* KURALLAR PANELİ TASARIMI */
-        .rules-panel {
-            max-width: 380px;
-            background-color: #34495e;
-            padding: 25px;
-            border-radius: 10px;
-            border-left: 5px solid #f1c40f;
-            box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
-        }
-
-        .rules-panel h2 {
-            margin-top: 0;
-            color: #f1c40f;
-            font-size: 24px;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            border-bottom: 1px solid #5d6d7e;
-            padding-bottom: 10px;
-        }
-
-        .rules-list {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .rules-list li {
-            margin-bottom: 15px;
-            line-height: 1.4;
-            font-size: 14.5px;
-        }
-
-        .rules-list b {
-            color: #f39c12;
-            display: block;
-            margin-bottom: 2px;
-            font-size: 16px;
-        }
-
-        hr {
-            border: 0;
-            border-top: 1px solid #5d6d7e;
-            margin: 15px 0;
-        }
-
-        /* MOBİL UYUMLULUK */
-        @media (max-width: 850px) {
-            .main-container { flex-direction: column; align-items: center; padding: 15px; }
-            #chess-board { grid-template-columns: repeat(8, 45px); grid-template-rows: repeat(8, 45px); }
-            .square { width: 45px; height: 45px; }
-            .rules-panel { max-width: 340px; }
-        }
-    </style>
+    <title>LoyaltyChess - Home</title>
+    <link rel="stylesheet" href="home_style.css"> 
 </head>
 <body>
+
+<div class="header">
+    <h1>LOYALTY CHESS</h1>
+</div>
 
 <div class="main-container">
     <div id="chess-board"></div>
 
-    <div class="rules-panel">
-        <h2>LoyaltyChess Rules</h2>
-        <ul class="rules-list">
-            <li><b>The Betrayal Rule:</b> If a piece is threatened by the opponent, the player must either move or protect that piece. If it's left undefended and the opponent is allowed to take it, the "Betrayal" begins.</li>
-            <li><b>WHİCH PİECE</b> This rule applies only to Rooks, Knights, andBishops. Queens and Pawns cannot betray.</li>
-                <li><b>Traitors:</b> Instead of removing the undefended piece, the opponent uses it as their own for ONE immediate move.</li>
-            <li><b>Limitations:</b> A traitor piece CANNOT deliver a check or checkmate. However, it can capture any other piece.</li>
-            <li><b>Sacrifice:</b> Once the betrayal move is complete, the piece has fulfilled its duty and is removed from the board permanently.</li>
-            <hr>
-            <li><b>Piece Movement:</b> Standard chess movements apply for King (♔), Queen (♕), Rook (♖), Bishop (♗), Knight (♘), and Pawn (♙).</li>
-        </ul>
+    <div class="side-panel">
+        <div id="status" class="msg-box">Eğitimi başlatmak için "Next Step"e tıkla!</div>
+        
+        <button id="next-btn">Next Step (İleri)</button>
+
+        <div class="rules-box">
+            <h3>LoyaltyChess Kuralları</h3>
+            <ul class="rules-list">
+                <li><b>İhanet Kuralı:</b> Korunmayan At, Fil veya Kaleler rakibin safına geçer.</li>
+                <li><b>İstisnalar:</b> <u>Piyon ve Vezir</u> asla ihanet etmez, her zaman sadıktır.</li>
+                <li><b>Süreç:</b> İhanet eden taş 1 hamle sonra oyundan çıkar.</li>
+            </ul>
+        </div>
     </div>
 </div>
 
-<script>
-    const board = document.getElementById('chess-board');
-
-    // Taşların CSS sınıflarıyla eşleşmesi
-    const piecesToClass = {
-        'r': 'b-r', 'n': 'b-n', 'b': 'b-b', 'q': 'b-q', 'k': 'b-k', 'p': 'b-p', // Black
-        'R': 'w-r', 'N': 'w-n', 'B': 'w-b', 'Q': 'w-q', 'K': 'w-k', 'P': 'w-p'  // White
-    };
-
-    // Standart Başlangıç Dizilimi
-    const layout = [
-        'r','n','b','q','k','b','n','r',
-        'p','p','p','p','p','p','p','p',
-        '','','','','','','','',
-        '','','','','','','','',
-        '','','','','','','','',
-        '','','','','','','','',
-        'P','P','P','P','P','P','P','P',
-        'R','N','B','Q','K','B','N','R'
-    ];
-
-    function initGame() {
-        for (let i = 0; i < 64; i++) {
-            const square = document.createElement('div');
-            square.classList.add('square');
-
-            // Renklendirme mantığı
-            const row = Math.floor(i / 8);
-            const col = i % 8;
-            square.classList.add((row + col) % 2 === 0 ? 'white' : 'black');
-
-            // Taş varsa ekle
-            const pieceSymbol = layout[i];
-            if (pieceSymbol) {
-                const pieceDiv = document.createElement('div');
-                pieceDiv.classList.add('piece');
-                pieceDiv.classList.add(piecesToClass[pieceSymbol]);
-                square.appendChild(pieceDiv);
-            }
-
-            board.appendChild(square);
-        }
-    }
-
-    initGame();
-</script>
-
+<script src="home_script.js"></script>
 </body>
 </html>
